      * **New:** Removed the statuses_comboBox from Version Creator UI.
      * **New:** Added a new context menu to the items in the tasks_treeView
        where the user is able to go to the dependent or dependee tasks of the
        clicked item in Version Creator UI.
      * **Fix:** 'my_tasks_only_checkBox' is back with the functionality.

  * **Env:**

    * **MayaEnv:**

      * **New:** External files are now moved to the
        version.absolute_path/external_files folder

    * **NukeEnv:**

      * **Fix:** Fixed a typo

0.1.0.a4
========

* **Pipeline:**

  * **UI:**

    * **Fix:** Version Creator UI now sets the statuses_comboBox to the status
      of the last version in the previous_version_tableWidget.
    * **New:** Version Creator UI now uses a QSplitter for tasks_groupBox,
      new_version_groupBox and previous_versions_groupBox which allows sizing
      of the columns.
    * **New:** Version Creator UI now shows the dependent task list in a new
      column in tasks_treeWidget.
    * **New:** Version Creator UI can now display task thumbnails through
      Stalker Pyramid server.
    * **Update:** In Version Creator UI, Version notes are now saved in
      **Version.description** attribute instead of creating a new **Note**
      instance.
    * **Utils:**

      * **New:** Added a new class called **UIFile** to manage ui files.
      * **New:** UICompiler now checks the *.ui* files against their stored md5
        checksum values to prevent unnecessary compiles of unchanged files.

  * **Utils:**

    * **New:** utils.open_browser_in_location() now selects the file if a file
      path is given.
    * **New:** Added **StalkerThumbnailCache** class, which can read thumbnails
      from Stalker Pyramid server through ``urllib2`` and cache them locally.

  * **Env:**

    * **Fix:** Houdini env is working now.
    * **Fix:** Nuke env is working now.
    * **New:** Maya env is now storing the parent version info upon save and